--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
 .carousel-caption{
 	text-shadow: 8px 8px 8px;
 }
-.jumbotron{
+.jumbotronx{
 	margin:0;
 	color:white;
 	text-shadow:8px 8px 8px;
@@ -55,7 +55,9 @@ html {
 .title{
 	padding-top:80px;
 }
-
+.img{
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 #html1{
 	height:285px;
 	width:285px;
@@ -190,6 +192,7 @@ html {
 }
 
 .fixed{
+	filter:blur(5px);
 	height:600px;
 	background-size: cover;
 	background-attachment: fixed;
@@ -203,7 +206,7 @@ html {
 	
 	left: 50%;
 	transform: translate(-50%,-50%);
-	width: 400px;
+	width: 350px;
 	height: 500px;
 	border-radius: 10px;
 	overflow: hidden;
@@ -329,13 +332,41 @@ html {
 	margin:0;
 	padding:10px;
 }
-.btmnav p{
+.btmnav p
+{
 	margin:0;
 }
-.hr{
+.hr
+{
 	border: 1px solid black;
 }
 
-.content{
+.content
+{
 	margin-top:120px;
+}
+
+.card:before
+{
+	content:'';
+	position:absolute;
+	top:-3px;
+	left:-3px;
+	right:-3px;
+	bottom:-3px;
+	background-image: linear-gradient(270deg, #89ff00, #060c21,#00bcd4); 
+	z-index:-1;
+	
+}
+.card:after
+{
+	content:'';
+	position:absolute;
+	top:-3px;
+	left:-3px;
+	right:-3px;
+	bottom:-3px;
+	background-image: linear-gradient(270deg, #89ff00, #060c21,#00bcd4); 
+	z-index:-2;
+	filter:blur(30px);
 }
