--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@
 		height: 100vh;
 		background-image: url('home.jpg');
 		background-size: auto 100%;
+	    background-size: cover;
+	background-repeat: no-repeat;
 		
 	}
     .bg, .logo img,.content img,.button img{
