--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@
 		width: 100vw;
 		height: 100vh;
 		background-image: url('home.jpg');
-	background-size: cover;
+	    
+	background-size: contain;
 	background-repeat: no-repeat;
 		
 	}
