--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@
 		display:block;
 		width: 100vw;
 		height: 100vh;
-		background-image: url('home.jpg');
+		background-image: url('home.jpg') no-repeat center center fixed;
 	    
-	background-size: auto;
+	background-size: cover;
 	
 		
 	}
