--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@
 		height: 100vh;
 		background-image: url('home.jpg');
 	    
+	background-position: left bottom;
 	background-size: cover;
+		background-repeat: no-repeat;
 	
 		
 	}
