--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 		width: 100vw;
 		height: 100vh;
 		background-image: url('home.jpg');
-		background-size: auto 100%;
+		background-size: cover;
 		background-repeat: no-repeat;
 	}
     .bg, .logo img,.content img,.button img{
